Make created ranks discoverable
